package com.paytm.wallet.model;

public enum TransferStatus {
    PENDING,
    COMPLETED,
    DECLINED
}
